fixes from review

--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -259,7 +259,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** I consider the model to have successfully captured the variation of the target variable. It shows that 92.3 % is predictable."
+    "**Answer:** I consider the model to have successfully captured the variation of the target variable. It shows that 92.3 % is predictable.\n",
+    "\n",
+    "**Update:** R-squared simply explains how good is your model when compared to the [baseline model](https://cdn-images-1.medium.com/max/1600/1*SXq8PJ0r0vUwpj6lwZS9NQ.png). \n",
+    "1. Our worst possible regression model could be the baseline model itself. Hence SSE would be equal to SST in this case. [R-squared=1–1=0](https://cdn-images-1.medium.com/max/1600/1*ZMWDxWV7hY9RSRXCkUE_1g.png).\n",
+    "2. And our best model would be the one that fits all the data points perfectly so SSE in this case would be 0. [R-squared=1–0=1](https://cdn-images-1.medium.com/max/1600/1*n3luq_3coDNdT4A4iVIvFg.png).\n",
+    "\n",
+    "If R-squared=0.923 then it means 92.3% variations in dependent variable are explained by the independent variables present in our model."
    ]
   },
   {
@@ -609,7 +615,9 @@
    "source": [
     "** Hint: ** The answer comes from the output of the code snipped above.\n",
     "\n",
-    "**Answer:** 4"
+    "**Answer:** 4\n",
+    "\n",
+    "**Update:** The answer of 4 is the same what I did in Question 6. We can see that the Complexity Curve could be helpful at some point."
    ]
   },
   {
@@ -663,7 +671,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** Predicted selling price for Client 1's home: $327,450.00, Predicted selling price for Client 2's home: $216,232.26 and Predicted selling price for Client 3's home: $893,760.00. The prices seem reasonable looking at the values for the respective features."
+    "**Answer:** Predicted selling price for Client 1's home: $327,450.00, Predicted selling price for Client 2's home: $216,232.26 and Predicted selling price for Client 3's home: $893,760.00. The prices seem reasonable looking at the values for the respective features.\n",
+    "\n",
+    "**Update:** We clearly can see that our observations in the Data Exploration confirmed. As the Neighborhood poverty level goes down the price goes up. A student-teacher ratio of nearby schools also affects the price, it's better to have a house in the area where the education is available. Also, people prefer to see more rooms in their house which raises the prices. Although I would be interested to see how all these parameters affect the price, when one of them is different and the others are identical."
    ]
   },
   {
